Update configure.ac to be a bit more modern

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,5 +1,5 @@
 docsdir = $(datadir)/app-install/docs
-docs_DATA = app-install-v1.draft
+docs_DATA = app-install-v1.txt
 
 EXTRA_DIST = $(docs_DATA)
 
