--- a/contrib/app-install.spec.in
+++ b/contrib/app-install.spec.in
@@ -1,7 +1,9 @@
+%define alphatag			#ALPHATAG#
+
 Summary: Tools for managing application install data
 Name: app-install
-Version: 002
-Release: 1
+Version:   #VERSION#
+Release:   0.#BUILD#%{?alphatag}%{?dist}
 License: GPLv2+
 Group: System Environment/Libraries
 URL: http://github.com/hughsie/app-install
@@ -40,18 +42,15 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root,-)
 %doc AUTHORS COPYING ChangeLog
 %{_sbindir}/app-install-generate-yum.py*
-%{_sbindir}/app-install-add
-%{_sbindir}/app-install-create
-%{_sbindir}/app-install-generate
-%{_sbindir}/app-install-remove
+%{_sbindir}/app-install-*
 %dir %{_datadir}/app-install
 %dir %{_datadir}/app-install/docs
 %dir %{_datadir}/app-install/icons
 %dir %{_datadir}/app-install/desktop
 %dir %{_localstatedir}/lib/app-install
-%{_datadir}/app-install/docs/app-install-v1.draft
+%{_datadir}/app-install/docs/*
 
 %changelog
-* Fri Mar 06 2009 Richard Hughes <rhughes@redhat.com> - 002-1
-- Initial build.
+* #LONGDATE# Richard Hughes <richard@hughsie.com> #VERSION#-0.#BUILD##ALPHATAG#
+- Update from git
 
