Add app-install-extract-package to explode a distro package to a tree of files

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -5,5 +5,8 @@ app-install-add
 app-install-create
 app-install-generate
 app-install-remove
+app-install-extract-package
+app-install-compose
 *.sqldata
+*.tar.bz2
 
