trivial: compile a local static library for the common source files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,15 @@ INCLUDES =						\
 	-DEGG_LOGGING="\"LOGGING\""			\
 	-DEGG_CONSOLE="\"CONSOLE\""
 
+noinst_LIBRARIES = libaishared.a
+libaishared_a_SOURCES =					\
+	egg-debug.c					\
+	egg-debug.h					\
+	ai-database.c					\
+	ai-database.h					\
+	ai-common.h					\
+	$(NULL)
+
 sbin_PROGRAMS = app-install-create app-install-remove app-install-add
 
 bin_PROGRAMS = app-install-extract-package app-install-generate
@@ -23,51 +32,31 @@ bin_PROGRAMS = app-install-extract-package app-install-generate
 app_install_extract_package_SOURCES =			\
 	ai-extract-package.c				\
 	$(NULL)
-app_install_extract_package_LDADD = $(GLIB_LIBS) $(ARCHIVE_LIBS)
+app_install_extract_package_LDADD = $(GLIB_LIBS) $(ARCHIVE_LIBS) libaishared.a
 app_install_extract_package_CFLAGS = $(WARNINGFLAGS_C)
 
 app_install_create_SOURCES =				\
-	egg-debug.c					\
-	egg-debug.h					\
-	ai-database.c					\
-	ai-database.h					\
 	ai-create.c					\
-	ai-common.h					\
 	$(NULL)
-app_install_create_LDADD = $(GIO_LIBS) $(GLIB_LIBS) $(SQLITE_LIBS)
+app_install_create_LDADD = $(GIO_LIBS) $(GLIB_LIBS) $(SQLITE_LIBS) libaishared.a
 app_install_create_CFLAGS = $(WARNINGFLAGS_C)
 
 app_install_remove_SOURCES =				\
-	egg-debug.c					\
-	egg-debug.h					\
-	ai-database.c					\
-	ai-database.h					\
 	ai-remove.c					\
-	ai-common.h					\
 	$(NULL)
-app_install_remove_LDADD = $(GIO_LIBS) $(GLIB_LIBS) $(SQLITE_LIBS)
+app_install_remove_LDADD = $(GIO_LIBS) $(GLIB_LIBS) $(SQLITE_LIBS) libaishared.a
 app_install_remove_CFLAGS = $(WARNINGFLAGS_C)
 
 app_install_add_SOURCES =				\
-	egg-debug.c					\
-	egg-debug.h					\
-	ai-database.c					\
-	ai-database.h					\
 	ai-add.c					\
-	ai-common.h					\
 	$(NULL)
-app_install_add_LDADD = $(GIO_LIBS) $(GLIB_LIBS) $(SQLITE_LIBS)
+app_install_add_LDADD = $(GIO_LIBS) $(GLIB_LIBS) $(SQLITE_LIBS) libaishared.a
 app_install_add_CFLAGS = $(WARNINGFLAGS_C)
 
 app_install_generate_SOURCES =				\
-	egg-debug.c					\
-	egg-debug.h					\
-	ai-database.c					\
-	ai-database.h					\
 	ai-generate.c					\
-	ai-common.h					\
 	$(NULL)
-app_install_generate_LDADD = $(GIO_LIBS) $(GLIB_LIBS) $(SQLITE_LIBS)
+app_install_generate_LDADD = $(GIO_LIBS) $(GLIB_LIBS) $(SQLITE_LIBS) libaishared.a
 app_install_generate_CFLAGS = $(WARNINGFLAGS_C)
 
 install-data-hook:
