Add app-install-query, a tool to query the app-install database

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -8,6 +8,7 @@ app-install-generate
 app-install-remove
 app-install-extract-package
 app-install-compose
+app-install-query
 *.sqldata
 *.tar.bz2
 *.db
