Add 'installed', 'rating' and 'screenshot-url' to the app-install schema
Also introduce a new tool, app-install-admin which can deal with
upgrading the database formats.

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -3,7 +3,7 @@
 *.o
 ai-self-test
 app-install-add
-app-install-create
+app-install-admin
 app-install-generate
 app-install-remove
 app-install-extract-package
