--- a/contrib/app-install.spec.in
+++ b/contrib/app-install.spec.in
@@ -34,8 +34,9 @@ make install DESTDIR=$RPM_BUILD_ROOT
 %post
 # we create the database file if it does not exist
 if [ ! -f /var/lib/app-install/desktop.db ]; then
-	/usr/sbin/app-install-create
+	/usr/sbin/app-install-admin --create
 fi
+/usr/sbin/app-install-admin --upgrade
 
 %files
 #%files -f %{name}.lang
