install pisi generator

--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -1,5 +1,5 @@
 contribdir = $(sbindir)
-contrib_SCRIPTS = app-install-generate-yum.py
+contrib_SCRIPTS = app-install-generate-yum.py app-install-generate-pisi.py
 
 EXTRA_DIST = $(contrib_SCRIPTS)
 
